--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,22 +5,38 @@
 
 </div>
 
+<div class="courses" *ngIf="courses[0] as course">
 
-<div class="courses">
+    <ng-template #blankImage let-courseName="description">
+        <p class="warn">{{courseName}} has no image yet.</p>
+        <img src="/assets/empty-image.png" />
+    </ng-template>
 
-    <div class="course-card">
+    <course-card 
+        (courseSelected)="onCourseSelected($event)"
+        [course]="course" [noImageTpl]="blankImage">
 
-        <div class="course-title">
-            Angular Core Deep Dive
-        </div>
-        <img width="300" alt="Angular Logo"
-             src="https://s3-us-west-1.amazonaws.com/angular-university/course-images/angular-core-in-depth-small.png">
+        <course-image [src]="course.iconUrl"></course-image>
 
         <div class="course-description">
-            A detailed walk-through of the most important part of Angular - the Core and Common modules.
-        </div>
+            {{ course.longDescription }}
+        </div>          
+    
+    </course-card>
+    <!-- @for (course of courses; track course.id; let index = $index, count = $count, first = $first, last = $last, even = $even, odd = $odd){
 
-    </div>
+        <course-card 
+            (courseSelected)="onCourseSelected($event)" 
+            [index]="index"
+            [class.is-first]="first"
+            [class.is-last]="last"
+            [class.is-even]="even"
+            [class.is-odd]="odd"
+            [course]="course" />
+    }
+    @empty {
+        <h1>No courses found.</h1>
+    } -->
 
 </div>
 
