finished up through 44 of 113 structural directives

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,27 +1,31 @@
-<div class="top-menu">
+<div highlighted class="top-menu">
 
     <img class="logo"
          src="https://angular-academy.s3.amazonaws.com/main-logo/main-page-logo-small-hat.png">
 
 </div>
 
+<ng-template [ngIf]="courses[0]" let-course>
 
 
-<div class="courses" *ngIf="courses[0] as course">
+    <div class="courses">
 
-    <course-card
-            (courseSelected)="onCourseSelected($event)"
-                 [course]="course">
+        <course-card highlighted #highlighter="hl"
+            (toggleHighlight)="onToggle($event)"
+                (courseSelected)="onCourseSelected($event)"
+                    [course]="course">
 
-        <course-image [src]="course.iconUrl"></course-image>
+            <course-image [src]="course.iconUrl"></course-image>
 
-        <div class="course-description">
-            {{ course.longDescription }}
-        </div>
+            <div class="course-description">
+                {{ course.longDescription }}
+            </div>
 
-    </course-card>
+        </course-card>
 
+    </div>
 
-</div>
+</ng-template>
+
 
 
