--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,8 +18,7 @@
             
             
             <course-image 
-                [src]="course.iconUrl"
-                *ngxUnless="course.iconUrl">
+                [src]="course.iconUrl">
             </course-image>
         
             
