--- a/src/app/course-card/course-card.component.css
+++ b/src/app/course-card/course-card.component.css
@@ -34,8 +34,14 @@
     font-weight: bold;
 }
 
+
 .course-card.beginner {
     background: lightsalmon;
 }
 
-
+.course-card ::ng-deep .course-description {
+    max-width: 360px;
+    margin: 0 auto;
+    margin-top: 15px;
+    user-select: none;
+  }
