--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,9 +7,9 @@
 
 <div>
 
-  <div class="courses" *ngIf="courses$ | async as courses">
+  <div class="courses">
 
-    <course-card highlighted *ngFor="let course of courses "
+    <course-card *ngFor="let course of courses "
                 (courseChanged)="save($event)"
                  [course]="course">
 
