--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,6 +15,7 @@
 
     <course-card *ngFor="let course of courses "
                 (courseChanged)="save($event)"
+                [type]="'beginner'"
                  [course]="course">
 
       <course-image [src]="course.iconUrl"></course-image>
