--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,19 +11,19 @@
 
 <div>
 
-  <div class="courses" *ngIf="(courses$ | async) as courses">
+  <div class="courses">
 
-    <course-card *ngFor="let course of courses "
-                (courseChanged)="save($event)"
-                [type]="'beginner'"
-                 [course]="course">
+    <course-card 
+      *ngFor="let course of courses "
+      (courseChanged)="save($event)"
+      type="beginner"
+      [course]="course">
 
       <course-image [src]="course.iconUrl"></course-image>
 
     </course-card>
 
   </div>
-
 
 </div>
 
