--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
 
 <div>
 
-  <div class="courses">
+  <div class="courses" *ngIf="courses[0] as course">
 
     <course-card 
       *ngFor="let course of courses "
