--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,13 +6,15 @@
 </div>
 
 <div class="demo">
-    <h4 i18n>Welcome to the Angular Core Deep Dive Course</h4>
+   
     <button (click)="onEditCourse()" i18n>Edit Course</button>
 </div>
 
 <div>
 
   <div class="courses">
+
+    <h4 i18n="welcome message.|Greet the user at the beginning of the course.@@welcomeMessage">Welcome to the Angular Core Deep Dive Course</h4>
 
     <course-card 
       *ngFor="let course of ( courses | filterByCategory: 'ADVANCED' ) "
