--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,32 +5,30 @@
 
 </div>
 
-<div class="demo">
-   
-    <button (click)="onEditCourse()" i18n>Edit Course</button>
-
-    <div i18n>{ coursesTotal, plural, =0 {No courses available.}
-      =1 {One course is available.}
-    other {A total of {{coursesTotal}} courses are available.} }</div>
-</div>
-
 <div>
 
-  <div class="courses">
+  @defer {
+    <div class="courses">
 
-    <h4 i18n="welcome message.|Greet the user at the beginning of the course.@@welcomeMessage">Welcome to the Angular Core Deep Dive Course</h4>
+      @for(course of courses; track $index; let count = $count) {
 
-    <course-card 
-      *ngFor="let course of courses"
-      (courseChanged)="save($event)"
-      type="beginner"
-      [course]="course"> 
+      <course-card 
+        (courseChanged)="save($event)"
+        type="beginner"
+        [course]="course"> 
 
-      <course-image [src]="course.iconUrl"></course-image>
+        <course-image [src]="course.iconUrl"></course-image>
 
-    </course-card>
+      </course-card>
+    }
 
-  </div>
+    </div>
+  }
+  @placeholder(minimum 5s) {
+
+    <h2>This is the placeholder.</h2>
+
+  }
 
 </div>
 
