defer with loading 92 of 113 completed

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,10 +24,13 @@
 
     </div>
   }
-  @placeholder(minimum 5s) {
+  @placeholder {
 
     <h2>This is the placeholder.</h2>
 
+  }
+  @loading(minimum 3s; after 1s){
+    <h2>This is a loading indicator...</h2>
   }
 
 </div>
