defer timer and prefetch triggers 94 of 113 completed

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
 
 <div>
 <!-- default: on idle is  trigger; prefetch on idle -->
-  @defer(on immediate; prefetch on immediate) {
+  @defer(on timer(15s); prefetch on timer(10s)) {
     <div class="courses">
 
       @for(course of courses; track $index; let count = $count) {
