--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,7 @@
 
 <div>
 <!-- default: on idle is  trigger; prefetch on idle -->
+<!-- prefetch of bundle comes first, then displays the defered bundle -->
   @defer(on timer(15s); prefetch on timer(10s)) {
     <div class="courses">
 
@@ -25,12 +26,13 @@
     </div>
   }
   @placeholder {
-
     <h2>This is the placeholder.</h2>
-
   }
   @loading(minimum 3s; after 1s){
     <h2>This is a loading indicator...</h2>
+  }
+  @error{
+    <h2>An error occurred.</h2>
   }
 
 </div>
