--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,14 +5,17 @@
 
 </div>
 
-<div style=" border:5px solid red; min-height: 900px; margin: 10px; "></div>
+<div class="demo-triggers">
+  <input placeeholder="type to trigger prefetch" #prefetch>
+  <button #display>Trigger Display</button>
+</div>
 <h1 #title>Trigger Viewport</h1>
 
 
 <div>
 <!-- default: on idle is  trigger; prefetch on idle -->
 <!-- prefetch of bundle comes first, then displays the defered bundle -->
-  @defer(on viewport(title); prefetch on idle) {
+  @defer(on interaction(display); prefetch on interaction(prefetch)) {
     <div class="courses">
 
       @for(course of courses; track $index; let count = $count) {
@@ -31,7 +34,7 @@
     </div>
   }
   @placeholder {
-    <h2>This is the placeholder.</h2>
+    <input placeholder="this is the placeholder!">
   }
   @loading(minimum 3s; after 1s){
     <h2>This is a loading indicator...</h2>
