--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,41 +5,16 @@
 
 </div>
 
-<div #triggerDisplay style="border:5px solid red; min-height:200px; margin:10px;padding:10px;" class="demo-triggers">
-  <button (click)="onPrefetch()">Trigger Prefetch</button>
-  <button (click)="onDisplay()">Trigger Display</button>
-</div>
-
 <div>
 <!-- default: on idle is  trigger; prefetch on idle -->
 <!-- prefetch of bundle comes first, then displays the defered bundle -->
-  @defer(when display; prefetch when performPrefetch) {
-    <div class="courses">
+  <div class="courses">
+    <div>Counter value: {{counter()}}</div>
 
-      @for(course of courses; track $index; let count = $count) {
+    <button (click)="increment()">Increment</button>
+   
 
-      <course-card 
-        (courseChanged)="save($event)"
-        [cardIndex]="$index"
-        type="beginner"
-        [course]="course"> 
-
-        <course-image [src]="course.iconUrl"></course-image>
-
-      </course-card>
-    }
-
-    </div>
-  }
-  @placeholder {
-    <input placeholder="this is the placeholder!">
-  }
-  @loading(minimum 3s; after 1s){
-    <h2>This is a loading indicator...</h2>
-  }
-  @error{
-    <h2>An error occurred.</h2>
-  }
+  </div>
 
 </div>
 
