--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,10 @@
   <div class="courses">
     <div>Counter value: {{counter()}}</div>
 
+    <div>Course Title: {{course().title}}</div>
+
+    <div>Courses: {{ courses().join(", ") }}</div>
+
     <button (click)="increment()">Increment</button>
    
 
