signals with compute API 104 of 113 completed

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,9 +11,7 @@
   <div class="courses">
     <div>Counter value: {{counter()}}</div>
 
-    <div>Course Title: {{course().title}}</div>
-
-    <div>Courses: {{ courses().join(", ") }}</div>
+    <div>Derived Value: {{ derivedCounter() }}</div>
 
     <button (click)="increment()">Increment</button>
    
