signal dependencies 105 of 113 completed

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,9 +13,12 @@
 
     <div>Derived Value: {{ derivedCounter() }}</div>
 
-    <button (click)="increment()">Increment</button>
-   
+    <div>Multiplier: {{ multiplier }}</div>
 
+    <button (click)="increment()">Increment</button>
+
+    <button (click)="incrementMultiplier()">++ Multiplier</button>
+   
   </div>
 
 </div>
