angular 17 signal-based data services 107 of 113 completed

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,6 +14,8 @@
     <div>Derived Value: {{ derivedCounter() }}</div>
 
     <button (click)="increment()">Increment</button>
+
+    <button (click)="onCleanup()"></button>
    
   </div>
 
