angular 17 signal-based data services 108 of 113 completed

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,13 +9,11 @@
 <!-- default: on idle is  trigger; prefetch on idle -->
 <!-- prefetch of bundle comes first, then displays the defered bundle -->
   <div class="courses">
-    <div>Counter value: {{counter()}}</div>
+    <div>Counter value: {{counterService.counter()}}</div>
 
     <div>Derived Value: {{ derivedCounter() }}</div>
 
     <button (click)="increment()">Increment</button>
-
-    <button (click)="onCleanup()"></button>
    
   </div>
 
